--- a/firsting/templates/notes_detail.html
+++ b/firsting/templates/notes_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% load static %} 
+{% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
-
 <section class='text-center container'>
 
     <div class="container">
