--- a/firsting/templates/register.html
+++ b/firsting/templates/register.html
@@ -1,7 +1,14 @@
+{% extends 'base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% block content %}
+
 <div class="container">
   <form method="POST">
+    {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">Join Today</legend>
+      {{form|crispy}}
     </fieldset>
     <div class="form-group">
       <button href="" class="btn btn-outline-info" type="submit">
@@ -15,3 +22,4 @@
     </small>
   </div>
 </div>
+{% endblock content %}
